--- a/styles_conference/index.html
+++ b/styles_conference/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
-  <header>
-    <h1>
-      <a href="index.html">Styles Conference</a>
-    </h1>
+  <header class="container">
+    <section class="container">  
+      <h1>
+          <a href="index.html">Styles Conference</a>
+      </h1>
+    </section>
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
     <!-- navigatiion part here -->
@@ -55,7 +57,7 @@
     </section>
   </section>
 
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <!-- navigation part here -->
       <nav>
