add new Day4 Layouts

--- a/project/Day4/layout1/index.html
+++ b/project/Day4/layout1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Layout1</title>
-    <link rel="stylesheet" href="layout1.css">
+    <link rel="stylesheet" href="assets/stylesheet/style.css">
 </head>
 <body>
     <!-- Exercise 1 area starts  -->
