create class for each work seperately

--- a/project/Day4/layout5/index.html
+++ b/project/Day4/layout5/index.html
@@ -6,22 +6,24 @@
         <link rel="stylesheet" href="assets/stylesheet/style.css">
     </head>
     <body>
-        <header><h1>Box model</h1></header>
-        <div class="container">
-            <div class="content"></div>
+        <header>
+            <h1>Box model</h1>
+        </header>
+        <div class="center">    
+            <div class="container">
+                <div class="content"></div>
+            </div>
         </div>
         <footer>
             <div class="list">
-                <div class="list-wrapper">
-                    <div class="list1"></div>
-                    <h2>Lightcoral</h2>
-                    <div class="list2"></div>
-                    <h2>Black</h2>
-                    <div class="list3"></div>
-                    <h2>#bada55</h2>
-                    <div class="list4"></div>
-                    <h2>Aqua</h2>
-                </div>
+                <div class="color"></div>
+                <h2>Lightcoral</h2>
+                <div class="color list2"></div>
+                <h2>Black</h2>
+                <div class="color list3"></div>
+                <h2>#bada55</h2>
+                <div class="color list4"></div>
+                <h2>Aqua</h2>
             </div>
         </footer>
     </body>
