--- a/project/Day4/layout2/index.html
+++ b/project/Day4/layout2/index.html
@@ -8,23 +8,23 @@
     <body>
         <h3>No border on these boxes</h3>
         <div class="container">
-            <div class="box1"></div>
-            <div class="box1"></div>
-            <div class="box1"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
         </div>
         <hr>
         <h3>10px border on these boxes</h3>
         <div class="container">
-            <div class="box2"></div>
-            <div class="box2"></div>
-            <div class="box3"></div>
+            <div class="box box1"></div>
+            <div class="box box1"></div>
+            <div class="box box1"></div>
         </div>
         <hr>
         <h3>10px border on these boxes but they are on the same block</h3>
         <div class="container">
-            <div class="box4"></div>
-            <div class="box4"></div>
-            <div class="box4"></div>
+            <div class="box box2"></div>
+            <div class="box box2"></div>
+            <div class="box box2"></div>
         </div>
     </body>
 </html>
