--- a/project/Day4/layout3/index.html
+++ b/project/Day4/layout3/index.html
@@ -5,22 +5,23 @@
         <title>Layout3</title>
         <link rel="stylesheet" href="assets/stylesheet/style.css">
     </head>
-    <body class="main">
-        <div class="container">
-            <div class="box1"><p>Google Guidelines</p></div>
-            <div class="box2"><p>Material Design</p></div>
-            <div class="box3"><p>Doodle Archive</p></div>
+    <body>
+        <div class="wrapper">    
+            <div class="container">
+                <div class="box1"><p>Google Guidelines</p></div>
+                <div class="box2"><p>Material Design</p></div>
+                <div class="box2 box3"><p>Doodle Archive</p></div>
+            </div>
+            <div class="container">
+                    <div class="box2 box4"><p>Google +</p></div>
+                    <div class="box1 box5"><p>Design Minutes</p></div>
+                    <div class="box2 box6"><p>Glass Designs</p></div>
+            </div>
+            <div class="container">
+                    <div class="box2 box7"><p>HTML</p></div>
+                    <div class="box2 box8"><p>CSS</p></div>
+                    <div class="box1 box9"><p>Javascript</p></div>
+            </div>    
         </div>
-        <div class="container">
-                <div class="box4"><p>Google +</p></div>
-                <div class="box5"><p>Design Minutes</p></div>
-                <div class="box6"><p>Glass Designs</p></div>
-        </div>
-        <div class="container">
-                <div class="box7"><p>HTML</p></div>
-                <div class="box8"><p>CSS</p></div>
-                <div class="box9"><p>Javascript</p></div>
-        </div>    
-        
     </body>
 </html>
