--- a/styles_conference/index.html
+++ b/styles_conference/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-  <header class="container">
-    <section class="container">  
-      <h1>
-          <a href="index.html">Styles Conference</a>
+  <section class="container">
+    <header class="container group">  
+      <h1 class="logo">
+          <a href="index.html">Styles <br>Conference</a>
       </h1>
-    </section>
+    
     <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
     <!-- navigatiion part here -->
@@ -24,40 +24,45 @@
       <a href="venue.html">Venue</a>
       <a href="register.html">Register</a>
     </nav>
-  </header>
-  <section>
+    </header>
+  <section class="hero container">
     <h2>Dedicated to the craft of Building Websites</h2>
     <p>
       Every year the brightest web designers and front-end developers descends on Chicago to discuss the latest
       technologies. Join us this August !
     </p>
-  </section>
-  <section>
-    <a href="register.html">Register</a>
-    <section>
-      <a href="speaker.html">
-      <h5>Speakers</h5>
-      <h3>World-class Speakers</h3>
-      </a>
-      <p>Joining us from all aroung the world are over twenty fantastic speakers, here to share their stories.</p>
+  
+    <a class="btn btn-alt" href="register.html">Register</a>
     </section>
-    <section>
-      <a href="schedule.html">
-      <h5>Schedule</h5>
-      <h3>Three Inspiring Days</h3>
-      </a>
-      <p>Enjoy three inspiting and action-packed days of talks, gathering, and all-around good times.</p>
-    </section>
-    <section>
-      <a href="venue.html">
-      <h5>Venue</h5>
-      <h3>The Chicago Theatre</h3>
-      </a>
-      <P>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</P>
+    <section class="grid">  
+      <!-- speaker -->
+      <section class="col-1-3">
+        <a href="speaker.html">
+        <h5>Speakers</h5>
+        <h3>World-class Speakers</h3>
+        </a>
+        <p>Joining us from all aroung the world are over twenty fantastic speakers, here to share their stories.</p>
+      </section><!--
+        schedule
+      --><section class="col-1-3">
+        <a href="schedule.html">
+        <h5>Schedule</h5>
+        <h3>Three Inspiring Days</h3>
+        </a>
+        <p>Enjoy three inspiting and action-packed days of talks, gathering, and all-around good times.</p>
+      </section><!--
+        venue
+      --><section class="col-1-3">
+        <a href="venue.html">
+        <h5>Venue</h5>
+        <h3>The Chicago Theatre</h3>
+        </a>
+        <P>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</P>
+      </section>
     </section>
   </section>
 
-    <footer class="container">
+    <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
       <!-- navigation part here -->
       <nav>
@@ -68,6 +73,7 @@
         <a href="register.html">Register</a>
       </nav>
     </footer>
+    
 
 
 
