complete Day6 project

--- a/project/Day4/layout3/index.html
+++ b/project/Day4/layout3/index.html
@@ -1,4 +1,16 @@
-<!Doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+
+</body>
+</html>
+
+
+
+<!-- <!Doctype html>
 <html>
     <head>
         <meta charset="UTF-8">
@@ -24,4 +36,4 @@
             </div>    
         </div>
     </body>
-</html>
+</html> -->
