--- a/project/Day6/layout1/index.html
+++ b/project/Day6/layout1/index.html
@@ -1,115 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Layout1</title>
-    <link rel="stylesheet" href="assets/stylesheet/style.css">
-</head>
-<body>
-    <div class="container">
-        <section>
-            <h1>No Floats</h1>
-            <div class="image1"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.
-        </section>
-        <hr>
-        <section>
-            <h1>Float: Left;</h1>
-            <div class="image2"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.
-        </section>
-        <hr>
-        <section>
-            <h1>Float: Right;</h1>
-            <div class="image3"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.
-        </section>
-        <hr>
-        <section>
-            <h1>Two objects,Float: Left;</h1>
-            <div class="image2"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            <div class="image2"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.
-        </section>
-        <hr>
-        <section>
-            <h1>Two objects,Float: Right;</h1>
-            <div class="image3"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            <div class="image3"><img src="assets/media/bhaiya.jpg" alt="alt"></div>
-            A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.
-        </section>
-        <hr> 
-        <section>
-            <h1>No float, No words</h1>
-            <div class="big">
-                <div class="small img-nomargin"><img src="assets/media/bhaiya.jpg" alt="alt">
-            </div>
-            </div>
-        </section>
-        <hr>
-        <section>
-            <h1>Float:left,No words</h1>
-            <div class="box">
-                <div class="image2"><img src="assets/media/bhaiya.jpg" alt="alt">
-            </div>
-        </section>          
-        <hr>
-        <section>
+    <head>
+        <meta charset="UTF-8">
+        <title>Layout1</title>
+        <link rel="stylesheet" href="assets/stylesheet/style.css">
+    </head>
+    <body>
+        <main class="wrapper">
+            <section>
+                <h1>No Floats</h1>
+                <div class="image1">
+                    <img src="assets/media/bhaiya.png" alt="alt">
+                </div>
+                <p>A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.</p>
+            </section>
+            <hr>
+            <section>
+                <h1>Float: Left;</h1>
+                <div class="image2">
+                    <img src="assets/media/bhaiya.png" alt="alt">
+                </div>
+                    <p>A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.</p>
+            </section>
+            <hr>
+            <section>
+                <h1>Float: Right;</h1>
+                <div class="image3">
+                    <img src="assets/media/bhaiya.png" alt="alt">
+                </div>
+                <p>A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.</p>
+            </section>
+            <hr>
+            <section>
+                <h1>Two objects,Float: Left;</h1>
+                <div class="image2">
+                    <img src="assets/media/bhaiya.png" alt="alt">
+                </div>
+                <div class="image2">
+                    <img src="assets/media/bhaiya.jpg" alt="alt">
+                </div>
+                <p>A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.</p>
+            </section>
+            <hr>
+            <section>
+                <h1>Two objects,Float: Right;</h1>
+                <div class="image3">
+                    <img src="assets/media/bhaiya.png" alt="alt">
+                </div>
+                <div class="image3">
+                    <img src="assets/media/bhaiya.jpg" alt="alt">
+                </div>
+                <p>A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.A scope is like a limited area. Scopes are the essential part of every programming language. They are behaving like a limited space for a declaration i.e where every variable is declared and what part of the program that variable can be accessed.</p>
+            </section>
+            <hr> 
+            <section>
+                <h1>No float, No words</h1>
+                <div class="big">
+                    <div class="small">
+                        <img class="img-nomargin" src="assets/media/bhaiya.png" alt="alt">
+                    </div>
+                </div>
+            </section>
+            <hr>
+            <section>
+                <h1>Float:left,No words</h1>
+                <div class="box">
+                    <div class="image2"><img src="assets/media/bhaiya.png" alt="alt">
+                </div>
+            </section>          
+            <hr>
+            <section>
                 <h1>Many floats,Not floating</h1>   
-            <div class="big">
-                <div class="float-box floating"></div>
-                <div class="float-box floating"></div>
-                <div class="float-box floating"></div>
-                 
-            </div>           
-        </section> 
-        <hr>
-        <section>
-            <h1>Many floats,No words</h1>
-            <div class="big clear">
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-            <div class="box-s"></div>
-        </div>
-        </section>
-        <hr>
-        <section>
+                <div class="big">
+                    <div class="float-box floating"></div>
+                    <div class="float-box floating"></div>
+                    <div class="float-box floating"></div>
+                </div>           
+            </section> 
+            <hr>
+            <section>
                 <h1>Many floats,No words</h1>
                 <div class="big clear">
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s"></div>
-                <div class="box-s clear"></div>
-            </div>
-        </section>
-        <hr>
-        <section>
-            <h1>Many floats,No words+invisible non floating clearing object</h1>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                </div>
+            </section>
+                <hr class="margin-100">
+                <section>
+                <h1>Many floats,No words + last one clear</h1>
+                <div class="big clear">
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s clear"></div>
+                </div>
+            </section>
+            <hr class="margin-200">
+            <section>
+                <h1>Many floats,No words+invisible non floating clearing object</h1>
                 <div class="inline-box">
                     <div class="box-s"></div>
                     <div class="box-s"></div>
@@ -128,33 +142,31 @@
                     <div class="box-s-clear"></div>
                 </div>
                 <p>Hello i am other content</p>
-        </section>
-        <hr>
-        <section>
-            <a href="something">http://google.com</a>    
-            <h1>Many floats,No words + ClearFix</h1>
-                    <div class="inline-box">
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                        <div class="box-s"></div>
-                    </div>
-                    <p>Hello i am other content</p>
             </section>
             <hr>
-
-
-    </div>
-</body>
+            <section>
+                <a href="something">http://google.com</a>    
+                <h1>Many floats,No words + ClearFix</h1>
+                <div class="inline-box">
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                    <div class="box-s"></div>
+                </div>
+                <p>Hello i am other content</p>
+            </section>
+            <hr>
+        </main>
+    </body>
 </html>
