create day9 layout1

--- a/project/Day6/layout6/index.html
+++ b/project/Day6/layout6/index.html
@@ -3,6 +3,8 @@
     <div class="wrapper">
         <head>
             <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width">
+            <meta name="viewport" content="initial-scale=10">
             <title>layout6</title>
             <link rel="stylesheet" href="assets/stylesheet/style.css">
         </head>
