add new layout Day10 layout1

--- a/project/Day9/layout2/index.html
+++ b/project/Day9/layout2/index.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <div class="wrapper">
+            <div class="skip">
+                <div class="top-nav">    
+                    <a href="#" class="top-header">SKIP TO MAIN CONTENT</a> 
+                </div>
+            </div>   
             <header>
                 <img src="assets/media/demo.gif" alt="header" class="header">
                 <nav class="navigation">
