Complete css and html of Day10 layout1

--- a/project/Day10/layout1/index.html
+++ b/project/Day10/layout1/index.html
@@ -72,10 +72,10 @@
                 <div class="wrapper">
                     <div class="album">
                         <div class="cf">
-                            <div class="album-image first">
+                            <div class="album-image">
                                 <img class="album-image-item" src="assets/media/pic06.jpg" alt="">
                             </div>
-                            <div class="album-description1 first">
+                            <div class="album-description">
                                 <div class="first-detail">    
                                     <div class="album-description-header">
                                         <h3>Viverra Hendrerit</h3>
@@ -93,10 +93,7 @@
                 <div class="wrapper">
                     <div class="album">
                         <div class="cf">
-                            <div class="album-image second">
-                                <img class="album-image-item" src="assets/media/pic07.jpg" alt="">
-                            </div>
-                            <div class="album-description2 second">
+                            <div class="album-description">
                                 <div class="first-detail">
                                     <div class="album-description-header">
                                         <h3>Viverra Hendrerit</h3>
@@ -106,6 +103,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="album-image second">
+                                <img class="album-image-item" src="assets/media/pic07.jpg" alt="">
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -114,10 +115,10 @@
                 <div class="wrapper">
                     <div class="album">
                         <div class="cf">
-                            <div class="album-image third">
+                            <div class="album-image">
                                 <img class="album-image-item" src="assets/media/pic08.jpg" alt="">
                             </div>
-                            <div class="album-description1 third">
+                            <div class="album-description">
                                 <div class="first-detail">        
                                     <div class="album-description-header">
                                         <h3>Viverra Hendrerit</h3>
