fixed the floating part in gallary2 item

--- a/project/Day10/layout1/index.html
+++ b/project/Day10/layout1/index.html
@@ -72,10 +72,10 @@
                 <div class="wrapper">
                     <div class="album">
                         <div class="cf">
-                            <div class="album-image">
+                            <div class="album-image left">
                                 <img class="album-image-item" src="assets/media/pic06.jpg" alt="">
                             </div>
-                            <div class="album-description">
+                            <div class="album-description left">
                                 <div class="first-detail">    
                                     <div class="album-description-header">
                                         <h3>Viverra Hendrerit</h3>
@@ -93,7 +93,10 @@
                 <div class="wrapper">
                     <div class="album">
                         <div class="cf">
-                            <div class="album-description">
+                            <div class="album-image right">
+                                <img class="album-image-item" src="assets/media/pic07.jpg" alt="">
+                            </div>
+                            <div class="album-description right">
                                 <div class="first-detail">
                                     <div class="album-description-header">
                                         <h3>Viverra Hendrerit</h3>
@@ -102,9 +105,6 @@
                                         <p>Curabitur eget semper ante. Morbi eleifend ultricies est, a  blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra    hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus.     Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="album-image second">
-                                <img class="album-image-item" src="assets/media/pic07.jpg" alt="">
                             </div>
                             
                         </div>
@@ -115,10 +115,10 @@
                 <div class="wrapper">
                     <div class="album">
                         <div class="cf">
-                            <div class="album-image">
+                            <div class="album-image left">
                                 <img class="album-image-item" src="assets/media/pic08.jpg" alt="">
                             </div>
-                            <div class="album-description">
+                            <div class="album-description left">
                                 <div class="first-detail">        
                                     <div class="album-description-header">
                                         <h3>Viverra Hendrerit</h3>
