modify certain layout

--- a/project/Day9/layout1/index.html
+++ b/project/Day9/layout1/index.html
@@ -11,22 +11,20 @@
         <div class="wrapper">
             <!-- header here -->
             <header>
-                <div class="heading">Example Header</div>
-                <!-- navigation bar -->
-                <nav>
-                    <div class="navigation">
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Sample Link 1</a></li>
-                            <li><a href="#">Sample Link 2</a></li>
-                            <li><a href="#">Sample Link 3</a></li>
-                            <li><a href="#">Sample Link 4</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                </nav>
+							<div class="heading">Example Header</div>
+							<!-- navigation bar -->
+							<nav class="navigation">
+								<ul>
+									<li><a href="#">Home</a></li>
+									<li><a href="#">About</a></li>
+									<li><a href="#">Sample Link 1</a></li>
+									<li><a href="#">Sample Link 2</a></li>
+									<li><a href="#">Sample Link 3</a></li>
+									<li><a href="#">Sample Link 4</a></li>
+									<li><a href="#">Portfolio</a></li>
+									<li><a href="#">Contact</a></li>
+								</ul>
+							</nav>
                 <!-- nav ends here -->
             </header>
             <main>
