add layout of gradient

--- a/practice/Day13/layout5/index.html
+++ b/practice/Day13/layout5/index.html
@@ -49,22 +49,22 @@
       </nav>
       <section class="features">
         <div class="feature">
-          <div class="icon"><img src="/assets/media/fav-icon/email.png">
+          <div class="icon"><img src="assets/media/fav-icon/email.png" alt="picture">
           </div>
           <p>lorel epsum</p>
         </div>
         <div class="feature">
-          <div class="icon"><img src="/assets/media/fav-icon/fb.png">
+          <div class="icon"><img src="assets/media/fav-icon/email.png" alt="picture">
           </div>
           <p>Lorem ipsum is placeholder text commonly used in the graphic</p>
         </div>
         <div class="feature">
-          <div class="icon"><img src="/assets/media/fav-icon/email.png">
+          <div class="icon"><img src="assets/media/fav-icon/email.png" alt="picture">
           </div>
           <p>Lorem ipsum is placeholder text commonly used in the graphic</p>
         </div>
         <div class="feature">
-          <div class="icon"><img src="/assets/media/fav-icon/email.png">
+          <div class="icon"><img src="assets/media/fav-icon/email.png" alt="picture">
           </div>
           <p>lLorem ipsum is placeholder text commonly used in the graphic</p>
         </div>
