--- a/project/Day12/layout2/index.html
+++ b/project/Day12/layout2/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- header -->
       <header class="top">
         <img src="assets/media/banner1.jpg" alt="head bannder" class="header">
         <h1>Our company</h1>
       </header>
       <main>
+        <!-- gallary -->
         <div class="gallery">
           <div class="gallery-item item1">
             <h2>The Title</h2>
