--- a/project/Day12/layout3/index.html
+++ b/project/Day12/layout3/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="assets/stylesheet/style.css">
   </head>
   <body>
+    <!-- wrapper -->
     <div class="wrapper">
       <header class="top">
         <h1>Card Layout</h1>
       </header>
+      <!-- navigation -->
       <nav class="navigation">
         <ul class="nav-items">
           <li><a href="#">Home</a></li>
@@ -22,6 +24,7 @@
           <li><a href="#">Contant</a></li>
         </ul>
       </nav>
+      <!-- main content  left part-->
       <main class="content">
         <section class="left">
           <div class="left1">
@@ -42,7 +45,7 @@
             </div>
           </div>
         </section>
-        <section class="right">
+        <!-- content image middle part -->
           <div class="content-image">
             <h3>The title</h3>
             <div class="cat-img">
@@ -53,6 +56,7 @@
               <a href="#" class="learn-more-item">Learn more</a>
             </div>
           </div>
+          <!-- content description -->
           <div class="content-desc">
             <div class="content-desc1">  
               <h3 class="h3-desc">The title</h3>
@@ -75,7 +79,6 @@
                 <a href="#" class="learn-more-item">Learn more</a>
               </div>
             </div>
-          </div>
         </section>
       </main>
     </div>
