--- a/styles_conference/index.html
+++ b/styles_conference/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <section class="row-alt1">  
+  <section>  
     <div class="lead container">
       <header class="primary-header container group">  
         <h1 class="logo">
@@ -21,11 +21,13 @@
 
       <!-- navigatiion part here -->
       <nav class="nav primary-nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
       </header>
     <section class="row-alt hero container">
@@ -72,11 +74,13 @@
       <small>&copy; Styles Conference</small>
       <!-- navigation part here -->
       <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+        --><li><a href="speakers.html">Speakers</a></li><!--
+        --><li><a href="schedule.html">Schedule</a></li><!--
+        --><li><a href="venue.html">Venue</a></li><!--
+        --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
     </footer>
     
