add bubble hover effect

--- a/project/final_project/index.html
+++ b/project/final_project/index.html
@@ -86,7 +86,10 @@
 					<h1 class="hero__heading">WELCOME TO INTENSE</h1>
 					<p class="hero__text">The smartest and most flexible bootstrap template by TemplateMonster you've ever seen. Create exactly what you need with our powerful bootstrap toolkit.</p>
 					<div>
-						<button>Try builder now</button>
+						<button class="builder">Try builder now
+							<div class="bubble1"></div>
+							<div class="bubble2"></div>
+						</button>
 						<button>Buy intense now</button>
 					</div>
 				</div>
