add styles to scss file in final layout

--- a/project/final_project/index.html
+++ b/project/final_project/index.html
@@ -28,20 +28,160 @@
 								</a>
 								<div class="sub-menu">
 									<ul class="sub-menu__list">
-										<li>
-											<a href="">Child theme</a>
+										<li class="one primary-drop">
+											<a href="">CHILD THEME</a>
+											<div class="sub-menu2-1 place top">
+												<ul class="sub-menu__list">
+													<li>
+														<a href="">PHOTOGRAPHER</a>
+													</li>
+													<li>
+														<a href="">RESTAURANT</a>
+													</li>
+													<li>
+														<a href="">HOTELS</a>
+													</li>
+													<li>
+														<a href="">BUS BOOKING</a>
+													</li>
+													<li>
+														<a href="">TRAIN BOOKING</a>
+													</li>
+													<li>
+														<a href="">FLIGHT BOOKING</a>
+													</li>
+													<li>
+														<a href="">DENTAL CLINIC</a>
+													</li>
+													<li>
+														<a href="">HAND MADE</a>
+													</li>
+												</ul>
+											</div>
 										</li>
-										<li>
-											<a href="">Child theme</a>
+										<li class="two primary-drop">
+											<a href="">HOME TYPES</a>
+											<div class="sub-menu2-2 place top">
+													<ul class="sub-menu__list">
+														<li>
+															<a href="">PHOTOGRAPHER</a>
+														</li>
+														<li>
+															<a href="">RESTAURANT</a>
+														</li>
+														<li>
+															<a href="">HOTELS</a>
+														</li>
+														<li>
+															<a href="">BUS BOOKING</a>
+														</li>
+														<li>
+															<a href="">TRAIN BOOKING</a>
+														</li>
+														<li>
+															<a href="">FLIGHT BOOKING</a>
+														</li>
+														<li>
+															<a href="">DENTAL CLINIC</a>
+														</li>
+														<li>
+															<a href="">HAND MADE</a>
+														</li>
+													</ul>
+												</div>
 										</li>
-										<li>
-											<a href="">Child theme</a>
+										<li class="three primary-drop">
+											<a href="">HOME SKINS</a>
+											<div class="sub-menu2-3 place top">
+													<ul class="sub-menu__list">
+														<li>
+															<a href="">PHOTOGRAPHER</a>
+														</li>
+														<li>
+															<a href="">RESTAURANT</a>
+														</li>
+														<li>
+															<a href="">HOTELS</a>
+														</li>
+														<li>
+															<a href="">BUS BOOKING</a>
+														</li>
+														<li>
+															<a href="">TRAIN BOOKING</a>
+														</li>
+														<li>
+															<a href="">FLIGHT BOOKING</a>
+														</li>
+														<li>
+															<a href="">DENTAL CLINIC</a>
+														</li>
+														<li>
+															<a href="">HAND MADE</a>
+														</li>
+													</ul>
+												</div>
 										</li>
-										<li>
-											<a href="">Child theme</a>
+										<li class="four primary-drop">
+											<a href="">HOME INTRO</a>
+											<div class="sub-menu2-4 place top">
+													<ul class="sub-menu__list">
+														<li>
+															<a href="">PHOTOGRAPHER</a>
+														</li>
+														<li>
+															<a href="">RESTAURANT</a>
+														</li>
+														<li>
+															<a href="">HOTELS</a>
+														</li>
+														<li>
+															<a href="">BUS BOOKING</a>
+														</li>
+														<li>
+															<a href="">TRAIN BOOKING</a>
+														</li>
+														<li>
+															<a href="">FLIGHT BOOKING</a>
+														</li>
+														<li>
+															<a href="">DENTAL CLINIC</a>
+														</li>
+														<li>
+															<a href="">HAND MADE</a>
+														</li>
+													</ul>
+												</div>
 										</li>
-										<li>
-											<a href="">Child theme</a>
+										<li class="five primary-drop">
+											<a href="">LANDING PAGES</a>
+											<div class="sub-menu2-5 place top">
+													<ul class="sub-menu__list">
+														<li>
+															<a href="">PHOTOGRAPHER</a>
+														</li>
+														<li>
+															<a href="">RESTAURANT</a>
+														</li>
+														<li>
+															<a href="">HOTELS</a>
+														</li>
+														<li>
+															<a href="">BUS BOOKING</a>
+														</li>
+														<li>
+															<a href="">TRAIN BOOKING</a>
+														</li>
+														<li>
+															<a href="">FLIGHT BOOKING</a>
+														</li>
+														<li>
+															<a href="">DENTAL CLINIC</a>
+														</li>
+														<li>
+															<a href="">HAND MADE</a>
+														</li>
+													</ul>
+												</div>
 										</li>
 									</ul>
 								</div>
@@ -86,11 +226,14 @@
 					<h1 class="hero__heading">WELCOME TO INTENSE</h1>
 					<p class="hero__text">The smartest and most flexible bootstrap template by TemplateMonster you've ever seen. Create exactly what you need with our powerful bootstrap toolkit.</p>
 					<div>
-						<button class="builder">Try builder now
+						<button class="builder"><a href="#">Try builder now</a>
 							<div class="bubble1"></div>
 							<div class="bubble2"></div>
 						</button>
-						<button>Buy intense now</button>
+						<button class="builder intense"><a href="#">Try intense now</a>
+							<div class="bubble3"></div>
+							<div class="bubble4"></div>
+						</button>
 					</div>
 				</div>
 				<div class="arow-btn">
@@ -101,10 +244,10 @@
 			<section class="container text-center">
 				<div class="theme">
 					<div>
-						<h2 class="theme__heading">Intense is the most flexible Bootstrap theme on TemplateMonster</h2>
-						<p class="theme__text">Join the 205,000+ Satified Customers Today at TemplateMonster.com. Created by the industry leaders Intense is a comprehensive set of tools which are super easy to pick up and run. It gives you a huge leg up to create your own beautiful site. Powerful options & tools, unlimited designs, responsive framework and amazing support are the reasons for our customers to fall in love.</p>
+						<h2 class="theme__heading">Intense is the <span class="flexible">most flexible</span> Bootstrap theme on TemplateMonster</h2>
+						<p class="theme__text">Join the <span class="customer">205,000+</span> Satified Customers Today at TemplateMonster.com. Created by the industry leaders Intense is a comprehensive set of tools which are super easy to pick up and run. It gives you a huge leg up to create your own beautiful site. Powerful options & tools, unlimited designs, responsive framework and amazing support are the reasons for our customers to fall in love.</p>
 					</div>
-					<div>
+					<div class="theme-image">
 						<img class="theme__img theme__img1" src="assets/media/moqup-home-ellipse.png" alt="">
 						<img class="theme__img theme__img2" src="assets/media/moqup-home-desktop.png" alt="">
 						<img class="theme__img theme__img3" src="assets/media/moqup-home-mobile.png" alt="">
@@ -209,14 +352,15 @@
 			<section class="ad">
 				<div class="container ad__container">
 					<h2 class="ad__heading">Intense is exactly what you need</h2>
-					<button>Buy Intense Now</button>
+					<button class="ad__button"><i class="fas fa-cart-plus"></i>Buy Intense Now</button>
 				</div>
 			</section>
 			<section class="about">
 				<div class="container clearfix">
 					<div class="col-md-6">
-						<h2>About Us</h2>
-						<p>TemplateMonster is an A-size depot of website templates - more than 46,000 designs to choose from. Since coming up in May 2002, we've gone partners with Magento, Drupal, WordPress, PrestaShop, Joomla, WooCommerce, and many more. 1 million clients were served during this time. Web templates + installation + hosting + customization + Search Engine Optimization + copywriting — all these services you can always get at TemplateMonster.com. If you're thirsty for knowledge, TemplateMonster blog provides you with the most recent web design news, infographics, freebies, discounts & promos.</p>
+						<h2 class="about__heading">About Us</h2>
+						<div class="about__hr"></div>
+						<p class="about__text">TemplateMonster is an A-size depot of website templates - more than 46,000 designs to choose from. Since coming up in May 2002, we've gone partners with Magento, Drupal, WordPress, PrestaShop, Joomla, WooCommerce, and many more. 1 million clients were served during this time. Web templates + installation + hosting + customization + Search Engine Optimization + copywriting — all these services you can always get at TemplateMonster.com. If you're thirsty for knowledge, TemplateMonster blog provides you with the most recent web design news, infographics, freebies, discounts & promos.</p>
 					</div>
 					<div class="col-md-6">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/8kK-cA99SA0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -227,19 +371,212 @@
 				<div class="container data__container">
 					<div class="data__item">
 						<h3 class="data__heading">58249</h3>
+						<hr class="data__hr">
 						<p>Templates</p>
 					</div>
 					<div class="data__item">
 						<h3 class="data__heading">246K</h3>
+						<hr class="data__hr">
 						<p>Happy Clients</p>
 					</div>
 					<div class="data__item">
 						<h3 class="data__heading">1200</h3>
+						<hr class="data__hr">
 						<p>Hours of Coding</p>
 					</div>
 					<div class="data__item">
 						<h3 class="data__heading">834K</h3>
+						<hr class="data__hr">
 						<p>Lines of Code</p>
+					</div>
+				</div>
+			</section>
+			<section class="event">
+				<figure class="event-top">
+					<img src="assets/media/moqup-home-desktop-skewed.png" alt="" class="event-figure">
+					<h1>Even More Features Available</h1>
+				</figure>
+			<section class="event__more">
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+				<div class="event__list">
+					<i class="far fa-window-restore"></i>
+					<div class="event__list__text">
+						<h3>RESPONSIVE & RETINA</h3>
+						<p>Intense looks simply great on any screen resolution and type. All images are responsive and ultra sharp.
+						</p>
+					</div>
+				</div>
+			</section>
+			</section>
+			<section class="event__bottom">
+				<div class="black__triangle"></div>
+				<button class="event__button">VIEW ALL ADDITIONAL FEATURES</button>
+			</section>
+			<section class="intense__theme text-center">
+				<h3>Child themes</h3>
+				<h4>Check out other themes based on <span class="intense__span">INTENSE</span></h4>
+			</section>
+			<section class="team">
+				<div class="team__header text-center">
+					<h3>Meet Our Team</h3>
+					<p>We are a team of developers, designers and leads who love what they do.</p>
+					<div class="team__hr"></div>
+				</div>
+				<div class="team__member">
+					<div class="member text-center">
+						<img src="assets/media/user-john-doe-140x140.jpg" alt="" class="member__list">
+						<h3>John Doe</h3>
+						<h5>Software Developer</h5>
+						<hr class="member__hr">
+						<div class="media__content">
+							<div class="media__icon">
+								<i class="fab fa-facebook-f"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-twitter"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-google-plus-g"></i>
+							</div>
+						</div>
+					</div>
+					<div class="member text-center">
+						<img src="assets/media/user-july-mao-140x140.jpg" alt="" class="member__list">
+						<h3>John Doe</h3>
+						<h5>Software Developer</h5>
+						<hr class="member__hr">
+						<div class="media__content">
+							<div class="media__icon">
+								<i class="fab fa-facebook-f"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-twitter"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-google-plus-g"></i>
+							</div>
+						</div>
+					</div>
+					<div class="member text-center">
+						<img src="assets/media/user-bernard-show-140x140.jpg" alt="" class="member__list">
+						<h3>John Doe</h3>
+						<h5>Software Developer</h5>
+						<hr class="member__hr">
+						<div class="media__content">
+							<div class="media__icon">
+								<i class="fab fa-facebook-f"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-twitter"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-google-plus-g"></i>
+							</div>
+						</div>
+					</div>
+					<div class="member text-center">
+						<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="member__list">
+						<h3>John Doe</h3>
+						<h5>Software Developer</h5>
+						<hr class="member__hr">
+						<div class="media__content">
+							<div class="media__icon">
+								<i class="fab fa-facebook-f"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-twitter"></i>
+							</div>
+							<div class="media__icon">
+								<i class="fab fa-google-plus-g"></i>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
