add progress of final layuot

--- a/project/final_project/index.html
+++ b/project/final_project/index.html
@@ -580,6 +580,64 @@
 					</div>
 				</div>
 			</section>
+			<section class="clients text-center">
+				<h2>What Clients Say?</h2>
+				<div class="client__hr"></div>
+				<div class="client__image">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
+					<img src="assets/media/user-ronald-oswald-140x140.jpg" alt="" class="client__img__list">
+				</div>
+				<p>The support service is really excellent at all levels, from first contact to more difficult IT actions. I feel safe and guaranteed regarding the purchase of this template. Thanks a lot!</p>
+				<h3>MARKETING, AT THEME.CO</h3>
+			</section>
+			<section class="footer">
+				<div class="footer__header">
+					<h2>INTENSE</h2>
+					<p>Feel the power of Nature</p>
+					<div class="media__content">
+						<div class="media__icon">
+							<i class="fab fa-facebook-f"></i>
+						</div>
+						<div class="media__icon">
+							<i class="fab fa-twitter"></i>
+						</div>
+						<div class="media__icon">
+							<i class="fab fa-google-plus-g"></i>
+						</div>
+						<div class="media__icon">
+							<i class="fab fa-linkedin-in"></i>
+						</div>
+					</div>
+				</div>
+				<div class="newsletter">
+					<h3>NEWSLETTER</h3>
+					<P>Keep up with our always upcoming product features and technologies. Enter your e-mail and subscribe to our newsletter.</P>
+					<div class="subscribe">
+						<div class="media__icon">
+							<i class="fas fa-envelope"></i>
+						</div>
+						<input type="text" placeholder="Input Email here"><!--
+					--><button class="subscribe__btn">SUBSCRIBE</button>
+					</div>
+				</div>
+				<div class="useful__links">
+					<ul>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Contact Us</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Pricing</a></li>
+						<li><a href="#">Clients</a></li>
+					</ul>
+				</div>
+				<div class="latest__news">
+					<h3>Let's change the world</h3>
+					<h3>The Meaning of Web Design</h3>
+					<h3>Get Started With TemplateMonster</h3>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
