--- a/project/final_project/index.html
+++ b/project/final_project/index.html
@@ -638,6 +638,9 @@
 					<h3>Get Started With TemplateMonster</h3>
 				</div>
 			</section>
+			<section class="footer__bottom text-center">
+				<small>Intense &copy; 2018. Privacy Policy</small>
+			</section>
 		</main>
 	</body>
 </html>
